Details
-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
Description
export --backup prints an error message when no nets have been configured
cassini-hosta:/home/hornc/lustre-wc-rel/lustre/tests # lnetctl lnet configure
cassini-hosta:/home/hornc/lustre-wc-rel/lustre/tests # lnetctl export --backup
---
show:
- net:
errno: -3
descr: ! "Network is down"
...
global:
numa_range: 0
max_interfaces: 200
discovery: 1
drop_asym_route: 0
retry_count: 2
transaction_timeout: 150
health_sensitivity: 100
recovery_interval: 1
router_sensitivity: 100
lnd_timeout: 49
response_tracking: 3
recovery_limit: 0
max_recovery_ping_interval: 900
cassini-hosta:/home/hornc/lustre-wc-rel/lustre/tests #